[package]
name = "ff"
version = "0.1.0"
edition = "2021"
authors = ["Nils Steffen Martel"]
description = "Very simple, very fast file finder"
license = "MIT"
repository = "https://github.com/nilsmartel/ff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
